<resources>
    <string name="app_name" translatable="false">ShoppingList</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Hasło</string>
    <string name="log_in_button_text" translatable="false">LOG IN</string>

    <string name="title_activity_order_list" translatable="false">OrderList</string>

    <string name="empty_view_title_text">Jescze nic nie kupiłeś.</string>
    <string name="empty_view_subtitle_text">Czas zrobić nowe zakupy. Kliknij w ikonkę na dole.</string>
    <string name="shop_data_label">Dane sklepu</string>
    <string name="order_detail_label">Dane zamówienia</string>
    <string name="order_details_button_text">Zaproś</string>
    <string name="product_list_label">Lista zakupów</string>
    <string name="product">Produkty</string>
    <string name="done">Potwierdź</string>
    <string name="next_button">Dalej</string>
    <string name="amount">Kwota</string>
    <string name="hint_shop_name">Nazwa sklepu</string>
    <string name="hint_localization">Lokalizacja</string>
    <string name="hint_shopping_date">Data zakupów</string>
    <string name="hint_product">Towar</string>
    <string name="hint_sample_price">0 zł</string>
    <string name="log_in_toast_1">Problem z weryfikacją. Zaloguj się jeszcze raz.</string>
    <string name="log_in_input_email_toast">Podaj email</string>
    <string name="login_no_connect_toast">Upss. Brak połączenia z siecią.</string>
    <string name="order_detail_act_toast">Link do zamówienia.</string>
    <string name="prod_list_act_product_toast">Podaj nazwę produktu</string>
    <string name="prod_list_act_amount_toast">Wprowadz kwotę.</string>
    <string name="shop_data_act_add_data_toast">Uzupełnij dane.</string>
    <string name="login_activ_validation_toast">Niepoprawne dane. Sprawdź email lub hasło.</string>
</resources>
