<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/shop_name"
        style="@style/EditTextView"
        android:hint="@string/hint_shop_name"
    />

    <EditText
        android:id="@+id/shop_address"
        style="@style/EditTextView"
        android:hint="@string/hint_localization"
        />

    <EditText
        android:id="@+id/shopping_date"
        style="@style/EditTextView"
        android:hint="@string/hint_shopping_date"
        android:focusable="false"
        android:inputType="date"
    />

    </LinearLayout>

    <Button
        android:id="@+id/shop_next_button"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/button_bottom_distance"
        android:background="@color/colorPrimary"
        android:text="@string/next_button"
        />

</RelativeLayout>